--- a/application/view/templates/index.html
+++ b/application/view/templates/index.html
@@ -102,16 +102,24 @@
                         </div>
                     </div>
                 </section>
-
             </article>   
             <div class="linha">
                 <h3 class="title-lines"> <span>Sua seleção especial</span></h3>
             </div>
-            <section id="produtos">
-                <section>
-                    <div>
-                    </div>
-            </section>
+                <section class="flex-0">
+                        {% for produto in listaProdutos %}
+                        <div>
+                            <img id='imagem' src='https:{{produto.get_imagem()}}'>
+                        </div>
+                        <div class="cards">
+                            <h3 id='nome-produto'>{{produto.get_nome()}}</h3>
+                            <p id='descricao'> {{produto.get_descriçao()}}.</p>
+                            <p id='valor-original'>De: R${{produto.get_preço_antigo()}}</p>
+                            <h2 id='valor desconto'>Por: R${{produto.get_preço()}}</h2>
+                            <p id='var-parcela'>ou {{produto.get_parcela()}}x de R${{produto.get_var_parcela()}}</p>
+                        </div>
+                        {% endfor %}
+                </section>
                 <div class="linha">
                     <h3 class="title-lines"> <span>Compartilhe a novidade</span></h3>
                 </div>
