--- a/application/view/static/css/estilos.css
+++ b/application/view/static/css/estilos.css
@@ -86,6 +86,8 @@ img{
     flex: 1 1 200;
     margin:20px;
 }
+
+/**
 .flex-1 button{
     max-width: 100%;
     display: block;
@@ -96,6 +98,54 @@ img{
     width: 200;
     height: 40px;
 }
+**/
+
+/** Butons **/
+.auto-1 .fundo #texto-inicial .flex-1 .btn-1{
+    background-color: white;
+    color: gray; 
+    border-radius: 6px;
+    border: 1px solid white;
+}
+.auto-1 .fundo #texto-inicial .flex-1 .btn-2{
+    background-color: white;
+    color: gray; 
+    border-radius: 6px;
+    border: 1px solid white;
+}
+.auto-1 .fundo #texto-inicial .flex-1 .btn-3{
+    background-color: white;
+    color: gray; 
+    border-radius: 6px;
+    border: 1px solid white;
+}
+.auto-1 .fundo #texto-inicial .flex-1 .btn-4{
+    background-color: white;
+    color: gray; 
+    border-radius: 6px;
+    border: 1px solid white;
+}
+
+.auto-1 .fundo #texto-inicial .flex-1 button{
+    width: 200px;
+    height: 35px;
+    background-color: white;
+    text-align: center;
+    margin: 4px 2px;
+    opacity: 0.6;
+    transition: 0.3s;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 6px;
+    font-size: 15px;
+    color:#888888;
+    border: 1px solid white;
+}
+.auto-1 .fundo #texto-inicial .flex-1 button:hover{
+    opacity: 10;
+}
+
+/** Buttons **/
 
 /** Body **/
 .flex-0{
@@ -113,12 +163,23 @@ img{
 
 }
 
+.flex-0 .cards .valor{
+    padding-top: 0px;
+}
+
 .flex-0 .cards p{
     font-size: 15px;
     width: 80%;
 }
 .flex-0 .cards .p-cards{
-    padding-top: 5px;
+    padding-top: 0px;
+}
+
+.flex-0 .cards{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .flex-0 .cards button{
